--- a/theoremsandproofs/phys.html
+++ b/theoremsandproofs/phys.html
@@ -28,13 +28,11 @@
     }
   });
 </script>
-<script type="text/javascript" async 
-  src="http://cdn.mathjax.org/mathjax/2.4-latest/MathJax.js?config=TeX">
-</script>
+<script async type="text/javascript" src="https://cdn.mathjax.org/mathjax/2.4-latest/MathJax.js?config=TeX"></script>
 
 <!-- Three.js -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
-<script src="http://threejs.org/examples/js/controls/TrackballControls.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+<script src="https://threejs.org/examples/js/controls/TrackballControls.js"></script>
 <script src="helvetiker_regular.typeface.js"></script>
 <script src="drawing.js"></script>
 <script src="phys.js"></script>
